test/tests/packages/lets/unknown_package.txt
error: package binding `nopkg::$threshold` not found
 --> tests/packages/lets/unknown_package.tql:5:10
  |
5 | from {x: nopkg::$threshold}
  |          ^^^^^^^^^^^^^^^^^ 
  |
